@@ -2,20 +2,15 @@ package com.matchpointecv.matchpointecv.time;
 
 import com.matchpointecv.matchpointecv.jogo.Jogo;
 import com.matchpointecv.matchpointecv.jogo.JogoDTO;
-import com.matchpointecv.matchpointecv.jogo.JogoRepository;
 import com.matchpointecv.matchpointecv.jogo.JogoService;
 import com.matchpointecv.matchpointecv.usuario.Usuario;
 import com.matchpointecv.matchpointecv.usuario.UsuarioDTO;
 import com.matchpointecv.matchpointecv.usuario.UsuarioService;
+import java.util.List;
+import java.util.NoSuchElementException;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
-import java.util.ArrayList;
-import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 public class TimeServiceImpl implements TimeService{
@@ -38,7 +33,19 @@ public class TimeServiceImpl implements TimeService{
 
         return times.stream()
                 .map(time -> modelMapper.map(time, TimeDTO.class))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public List<TimeDTO> getAllByIds(List<Long> ids) {
+        List<Time> times = repository.findAllByIdIn(ids);
+
+        if (times.isEmpty()) {
+            throw new NoSuchElementException("Nenhum time encontrado");
+        }
+
+        return times.stream()
+                .map(time -> modelMapper.map(time, TimeDTO.class))
+                .toList();
     }
 
     public TimeDTO save(TimeDTO timeDTO) {
@@ -50,18 +57,22 @@ public class TimeServiceImpl implements TimeService{
         time.setCapitao(usuarioCapitao);
 
         List<Long> integrantesIds = timeDTO.getIntegrantes();
-        List<UsuarioDTO> integrantesDTOs = usuarioService.getAllByIds(integrantesIds);
-        List<Usuario> integrantes = integrantesDTOs.stream()
-                .map(integranteDto -> modelMapper.map(integranteDto, Usuario.class))
-                .toList();
-        time.setIntegrantes(integrantes);
+        if (!integrantesIds.isEmpty()) {
+            List<UsuarioDTO> integrantesDTOs = usuarioService.getAllByIds(integrantesIds);
+            List<Usuario> integrantes = integrantesDTOs.stream()
+                    .map(integranteDto -> modelMapper.map(integranteDto, Usuario.class))
+                    .toList();
+            time.setIntegrantes(integrantes);
+        }
 
         List<Long> jogosIds = timeDTO.getJogos();
-        List<JogoDTO> jogosDTOs = jogoService.getAllByIds(jogosIds);
-        List<Jogo> jogos = jogosDTOs.stream()
-                .map(jogoDTO -> modelMapper.map(jogoDTO, Jogo.class))
-                .toList();
-        time.setJogos(jogos);
+        if (!jogosIds.isEmpty()) {
+            List<JogoDTO> jogosDTOs = jogoService.getAllByIds(jogosIds);
+            List<Jogo> jogos = jogosDTOs.stream()
+                    .map(jogoDTO -> modelMapper.map(jogoDTO, Jogo.class))
+                    .toList();
+            time.setJogos(jogos);
+        }
 
 
         return modelMapper.map(repository.save(time), TimeDTO.class);
